--- a/templates/template-product.html
+++ b/templates/template-product.html
@@ -274,7 +274,7 @@
             <h1>🌽 Node Farm 🥦</h1>
 
             <figure class="product">
-                <div class="product__organic {%NOTORGANIC%}">
+                <div class="product__organic {%NOT_ORGANIC%}">
                     <h5>Organic</h5>
                 </div>
                 <a href="#" class="product__back">
